# FysicsEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/basic/: main.c
examples/sdl/: main.c
include/physics/: fysics.h
include/physics/collision/: aabb.h  collision_detection.h  shape.h
include/physics/core/: body.h  world.h
include/physics/math/: math.h  vector2.h
include/physics/memory/: alloc.h  pool.h
include/physics/util/: vector2.h
include/physics/utils/: util.h
src/: CMakeLists.txt
src/collision/: aabb.c  collision_detection.c  shape.c
src/core/: body.c  world.c
src/math/: math.c  vector2.c
src/utils/: vector2.c
test/collision/circlevscircle/: main.c
test/collision/circlevsrect/: main.c
test/collision/rectvsrect/: main.c
test/fyAABB/: main.c
tests/: CMakeLists.txt
